--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,16 +9,13 @@
             ]
         }
     },
+    "pylint.args": [
+        "--max-line-length=100",
+        "--disable=C0411, W1203, C0115, C0103"
+    ],
     "python.testing.pytestArgs": [
         "tests"
     ],
-    "python.testing.unittestEnabled": true,
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./tests",
-        "-p",
-        "test_*.py"
-    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
