--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ cvxpy = "^1.3.2"
 pandas = "^2.1.0"
 scikit-learn = "^1.3.0"
 tqdm = "^4.66.1"
+statsmodels = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 
