--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^2.1.0"
 scikit-learn = "^1.3.0"
 tqdm = "^4.66.1"
 statsmodels = "^0.14.0"
+nbsphinx = "^0.9.3"
 
 [tool.poetry.dev-dependencies]
 
