--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ scikit-learn = "^1.3.0"
 tqdm = "^4.66.1"
 statsmodels = "^0.14.0"
 nbsphinx = "^0.9.3"
+yfinance = "^0.2.30"
+pydata-sphinx-theme = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 
