--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,15 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+
+    "terminal.integrated.profiles.linux": {
+        "bash": {
+            "path": "bash",
+            "args": [
+                "--init-file",
+                "./quantbullet_dev_init.sh"
+            ]
+        }
+    },
+    "terminal.integrated.defaultProfile.linux": "bash",
 }
