--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 matplotlib = "^3.7.3"
 cvxpy = "^1.3.2"
 pandas = "^2.1.0"
@@ -16,6 +16,7 @@ tqdm = "^4.66.1"
 statsmodels = "^0.14.0"
 nbsphinx = "^0.9.3"
 yfinance = "^0.2.30"
+importlib-resources = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
 
