--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ pandas = "^2.1.0"
 scikit-learn = "^1.3.0"
 tqdm = "^4.66.1"
 statsmodels = "^0.14.0"
-nbsphinx = "^0.9.3"
-yfinance = "^0.2.30"
 importlib-resources = "^6.1.0"
+xgboost = "^2.0.2"
+seaborn = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 
@@ -27,6 +27,8 @@ myst-nb = {version = "^0.17.2", python = "^3.9"}
 sphinx-autoapi = "^2.1.1"
 sphinx-rtd-theme = "^1.3.0"
 pydata-sphinx-theme = "^0.14.1"
+nbsphinx = "^0.9.3"
+yfinance = "^0.2.30"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
