--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ sphinx-rtd-theme = "^1.3.0"
 pydata-sphinx-theme = "^0.14.1"
 nbsphinx = "^0.9.3"
 yfinance = "^0.2.30"
+pandas-datareader = "^0.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
