--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "quantbullet"
-version = "0.1.0"
+version = "0.1.1"
 description = "Toolkit for swift quant analysis"
 authors = ["Yiming Zhang"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9"
 matplotlib = "^3.7.3"
 cvxpy = "^1.3.2"
 pandas = "^2.1.0"
@@ -31,6 +31,7 @@ pydata-sphinx-theme = "^0.14.1"
 nbsphinx = "^0.9.3"
 yfinance = "^0.2.30"
 pandas-datareader = "^0.10.0"
+setuptools = "^69.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
