Adds prediction timing and debug logging.
Adds detailed timing information to the prediction process, breaking down the time spent in column selection, data conversion between Python and R, and the actual R prediction.

This enhanced logging aids in debugging and performance optimization efforts.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 # pytest.ini
 [pytest]
 addopts = -s
+# log-cli-level=INFO
+# log_cli = true
+# log_cli_format = %(levelname)s - %(name)s - %(message)s
